# job

./: .gitignore  README  README.md  pyproject.toml  test_log.txt
src/: decorators.py  generators.py  main.py  masks.py  processing.py  test_log.txt  widget.py
tests/: conftest.py  test_main.py  test_masks.py  test_processing.py  test_widget.py  tests_generators.py
