[tool.poetry]
name = "pythonproject2"
version = "0.1.0"
description = ""
authors = ["Elena <elenanagaevap@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.lint.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
mypy = "^1.10.0"



[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[tool.isort]
# максимальная длина строки
line_length = 119

[tool.black]
# Максимальная длина строки
line-length = 119
# Файлы, которые не нужно форматировать
#exclude = '''


[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
